--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -55,3 +55,9 @@ body {
 footer {
     margin: 50px 0;
 }
+#search{
+    margin-top: 12px;
+    margin-left: 20px;
+    width: 550px;
+    height: 30px;
+}
