--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -13,6 +13,12 @@
     </div>
   <% end %>
   <div  class="form-group row">
+      <%= f.label :poster, class: "col-md-2 mform" %>
+      <div class="col-md-10">
+          <%= f.file_field :poster, class: "form-control" %>
+      </div>
+  </div>
+  <div  class="form-group row">
     <%= f.label :title, class: "col-md-2 mform" %> 
     <div class="col-md-10">
         <%= f.text_field :title, class: "form-control", placeholder: "Movie Name" %>
