--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,47 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <%= link_to "Movie Owl", "/", class:"navbar-brand" %>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                  <li>
+                      <a href="">
+                          Sing In
+                      </a>
+                  </li>
+                  <li>
+                      <a href="">
+                          Sign Up
+                      </a>
+                  </li>
+                  <li>
+                      <%= form_tag("/", method: :get) do %>
+                        <%= text_field_tag 'search', nil, placeholder: "Search using Owl's vision...", class: "navbar-nav" %>
+                        <!--%= button_tag 'woot', class:'glyphicon glyphicon-search' %-->
+                      <% end %>
+                  </li>
+                  <li>
+                      <%= link_to "Admin Owl", "/movies" %>
+                  </li>
+              </ul>
+          </div>
+          <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container -->
+  </nav>
     <%= yield %>
   </body>
 </html>
