--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,7 +11,7 @@
     	    <% else %>
                 <table class="table table-striped table-bordered">
                   <tr>
-                	<!--th>Thumbnail</th-->
+                	<th>Thumbnail</th>
                     <th>Movie Title</th>
                     <th>Release Date</th>
                 	<th>Description</th>
@@ -20,6 +20,7 @@
                  
                   <% @movies.each do |movie| %>
                     <tr>
+                      <td><%= image_tag movie.poster.url(:thumb) %></td>
                 	  <!--td><!--%= image_tag("#{movie.id}.jpg", :alt => "No Image") %></td-->
                 	  <td><%= movie.title %></td>
                       <td><%= movie.rdate %></td>
