--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,11 @@
 <center>
     <h1>Welcome Admin Owl</h1>
 </center>
+<% if !flash[:notice].blank? %>
+   <div class = "alert alert-info">
+      <%= flash[:notice] %>
+   </div>
+<% end %>
 <div class="container">
     <div class="row text-center admin">
         <%= link_to 'Add A New Movie', new_movie_path, html_options={class:"btn btn-primary btn-xl"} %>
