--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
 
         <div class="col-md-3">
-            <p class="lead">Category</p>
+            <p class="lead">Category Search</p>
             <div class="list-group">
                 <a href="#" class="list-group-item">Category 1</a>
                 <a href="#" class="list-group-item">Category 2</a>
