--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,23 +36,32 @@
                   </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                  <% if user_signed_in? %>
+                  <% if admin_signed_in? %>
                     <li>
-                        <%= link_to current_user.email, edit_user_registration_path %>
+                        <%= link_to "Movies", url_for("/movies") %>
                     </li>
                     <li>
-                        <%= link_to 'Owl Out', destroy_user_session_path, method: :delete %>
+                        <%= link_to 'Logout', destroy_admin_session_path, method: :delete %>
                     </li>
                   <% else %>
-                    <li>
-                        <%= link_to 'Owl Up', new_user_registration_path %>
-                    </li>
-                    <li>
-                        <%= link_to 'Owl In', new_user_session_path %>
-                    </li>
-                    <li>
-                        <%= link_to "Admin Owl", "/movies" %>
-                    </li>
+                    <% if user_signed_in? %>
+                      <li>
+                          <%= link_to current_user.email, edit_user_registration_path %>
+                      </li>
+                      <li>
+                          <%= link_to 'Owl Out', destroy_user_session_path, method: :delete %>
+                      </li>
+                    <% else %>
+                      <li>
+                          <%= link_to 'Owl Up', new_user_registration_path %>
+                      </li>
+                      <li>
+                          <%= link_to 'Owl In', new_user_session_path %>
+                      </li>
+                      <li>
+                          <%= link_to "Admin Owl", "/movies" %>
+                      </li>
+                    <% end %>
                   <% end %>
               </ul>
           </div>
