--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="col-md-9">
-            <h3>Upcoming movies...</h3>
+            <h3>Latest & Upcoming Movies...</h3>
         </div>
         <div class="col-md-9">
             
