--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,14 +23,15 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <%= link_to "Movie Owl", "/", class:"navbar-brand" %>
+              <%= image_tag("owl.png", class:"owl navbar-nav") %>&nbsp;
+              <%= link_to "Movie Owl".html_safe, "/", class:"navbar-brand" %>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-left">
                   <li>
-                      <%= form_tag("/", method: :get, class: "nav navbar-nav navbar-left") do %>
-                        <%= text_field_tag 'search', nil, placeholder: "Search using Owl's vision...", class: "navbar-nav" %>
+                      <%= form_tag(movies_search_path, method: :get, class: "nav navbar-nav navbar-left") do %>
+                        <%= text_field_tag 'search', params[:search], placeholder: "Search using Owl's vision...", class: "navbar-nav" %>
                         <!--%= button_tag 'woot', class:'glyphicon glyphicon-search' %-->
                       <% end %>
                   </li>
