--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,3 +26,16 @@
  .owl{
   width: 50px;
  }
+span.small {
+    font-size: 14px;
+    font-style: italic;
+}
+#search{
+    margin-top: 12px;
+    margin-left: 20px;
+    width: 520px;
+    height: 30px;
+}
+.mowl {
+    margin-left: 5px !important;
+}
