--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -51,3 +51,9 @@
 footer {
     margin: 50px 0;
 }
+.lead{
+    text-align: center;
+    font-weight: bolder;
+    border: 1px dotted;
+    background-color: lightcyan;
+}
