ratings and reviews

--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -17,6 +17,9 @@
     text-align: center !important;
 }
 .mPoster{
-    width: 400px;
-    height: 650px;
+   /* width: 400px;*/
+    height: 400px;
+}
+.ub {
+    margin-top: 5px;
 }
