--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -37,9 +37,15 @@
                 <li>Adipiscing Elit</li-->
             </ul>
             <h3>Owl Ratings</h3>
-            <p><%= @movie.mratings %> / 5</p>
+            <h4><%= @movie.mratings %> / 5.0</h4>
             <h3>Total Ratings</h3>
-            <p><%= @movie.reviews.count %></p>
+            <h4><%= @movie.reviews.count %></h4>
+            <% wl = current_user.watchlists.exists?(['user_id LIKE ? and movie_id LIKE ?', "%#{current_user.id}%", "%#{@movie.id}%"]) %>
+            <% if wl %>
+                <p class="text-info">You have already added this movie into your watchlist.</p>
+            <% else %>
+                <%= button_to '+ Watch List', user_watchlists_path(:user_id => current_user.id, :movie_id => @movie.id), method: :post, class:"list-group-item btn-lg btn-primary" %>
+            <% end %>
         </div>
 
     </div>
@@ -64,7 +70,7 @@
         <% if @movie.reviews.count==0 %>
             <h3 class="text-info">Be the 1st owl to review this movie.</h3>
         <% else %>
-            <h4>Total Reviews =<%= @movie.reviews.count %></h4>
+            <h4>Total Reviews = <%= @movie.reviews.count %></h4>
             <table class="table table-striped table-bordered">
               <thead>
                 <tr>
