--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,15 +43,20 @@
                         <%= link_to "Movies", url_for("/movies") %>
                     </li>
                     <li>
-                        <%= link_to 'Logout', destroy_admin_session_path, method: :delete %>
+                        <%= link_to '<span class="glyphicon glyphicon-off"></span> Logout'.html_safe, destroy_admin_session_path, method: :delete %>
                     </li>
                   <% else %>
                     <% if user_signed_in? %>
                       <li>
-                          <%= link_to current_user.email, edit_user_registration_path %>
+                          <%= link_to "<span class='glyphicon glyphicon-user'></span> #{current_user.email}<span class='caret'></span>".html_safe, edit_user_registration_path, html_options = {class:"dropdown-toggle", 'data-toggle':"dropdown", 'role':"button", 'aria-haspopup':"true", 'aria-expanded':"false"} %>
+                          <ul class="dropdown-menu">
+                            <li><%= link_to "<span class='glyphicon glyphicon-bookmark'></span>&nbsp;&nbsp;My Watch List".html_safe,user_watchlists_path(current_user.id) %></li>
+                            <li><%= link_to "<span class='glyphicon glyphicon-cog'></span>&nbsp;&nbsp;My Reviews".html_safe, reviews_user_path %></li>
+                            <li><%= link_to "<span class='glyphicon glyphicon-cog'></span>&nbsp;&nbsp;Account Settings".html_safe, edit_user_registration_path %></li>
+                          </ul>
                       </li>
                       <li>
-                          <%= link_to 'Owl Out', destroy_user_session_path, method: :delete %>
+                          <%= link_to '<span class="glyphicon glyphicon-off"></span> Owl Out'.html_safe, destroy_user_session_path, method: :delete %>
                       </li>
                     <% else %>
                       <li>
