--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -40,11 +40,13 @@
             <h4><%= @movie.mratings %> / 5.0</h4>
             <h3>Total Ratings</h3>
             <h4><%= @movie.reviews.count %></h4>
-            <% wl = current_user.watchlists.exists?(['user_id LIKE ? and movie_id LIKE ?', "%#{current_user.id}%", "%#{@movie.id}%"]) %>
-            <% if wl %>
-                <p class="text-info">You have already added this movie into your watchlist.</p>
-            <% else %>
-                <%= button_to '+ Watch List', user_watchlists_path(:user_id => current_user.id, :movie_id => @movie.id), method: :post, class:"list-group-item btn-lg btn-primary" %>
+            <% if !admin_signed_in? %>
+                <% wl = current_user.watchlists.exists?(['user_id LIKE ? and movie_id LIKE ?', "%#{current_user.id}%", "%#{@movie.id}%"]) %>
+                <% if wl %>
+                    <p class="text-info">You have already added this movie into your watchlist.</p>
+                <% else %>
+                    <%= button_to '+ Watch List', user_watchlists_path(:user_id => current_user.id, :movie_id => @movie.id), method: :post, class:"btn-primary btn-lg" %>
+                <% end %>
             <% end %>
         </div>
 
