--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
                           <%= link_to "<span class='glyphicon glyphicon-user'></span> #{current_user.email}<span class='caret'></span>".html_safe, edit_user_registration_path, html_options = {class:"dropdown-toggle", 'data-toggle':"dropdown", 'role':"button", 'aria-haspopup':"true", 'aria-expanded':"false"} %>
                           <ul class="dropdown-menu">
                             <li><%= link_to "<span class='glyphicon glyphicon-bookmark'></span>&nbsp;&nbsp;My Watch List".html_safe,user_watchlists_path(current_user.id) %></li>
-                            <li><%= link_to "<span class='glyphicon glyphicon-cog'></span>&nbsp;&nbsp;My Reviews".html_safe, reviews_user_path %></li>
+                            <li><%= link_to "<span class='glyphicon glyphicon-cog'></span>&nbsp;&nbsp;My Reviews".html_safe, reviews_user_path(:user_email => current_user.email) %></li>
                             <li><%= link_to "<span class='glyphicon glyphicon-cog'></span>&nbsp;&nbsp;Account Settings".html_safe, edit_user_registration_path %></li>
                           </ul>
                       </li>
