--- a/app/views/watchlists/index.html.erb
+++ b/app/views/watchlists/index.html.erb
@@ -13,7 +13,11 @@
             	<th colspan=2>Actions</th>
             </thead>
             <tbody>
+                <% x=0 %>
                 <% Movie.joins(:watchlists).where(["user_id LIKE ?",current_user.id]).each do |movie| %>
+                    <% rr = movie.watchlists.where(["user_id LIKE ?", current_user.id]).each do |rrr| %>
+                        <% x = rrr %>
+                    <% end %>
                     <tr>
                       <td><%= image_tag movie.poster.url(:thumb) %></td>
                 	  <td><%= movie.title %></td>
@@ -21,7 +25,7 @@
                 	  <td><%= movie.genre %></td>
                 	  <td><%= movie.description %></td>
                 	  <td><%= link_to 'Show Details', movie_path(movie), html_options={class:"btn btn-info btn-xl"} %></td>
-                      <td><%= link_to 'Remove', user_watchlist_path(:id => movie.watchlists.pluck(:id)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xl mbtn" %></td>
+                      <td><%= link_to 'Remove', user_watchlist_path(:id => x.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xl mbtn" %></td>
                     </tr>
                 <% end %>
             </tbody>
