welcome/home page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -54,6 +54,9 @@ footer {
 .lead{
     text-align: center;
     font-weight: bolder;
-    border: 1px dotted;
-    background-color: lightcyan;
+    background-color: #1abc9c;
+    color: white;
+}
+.slide-image{
+    height: 450px !important;
 }
