--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -47,13 +47,13 @@
   <div class="form-group row">
     <%= f.label "Lead Actor(s)", class: "col-md-3 mform" %> 
     <div class="col-md-9">
-        <%= f.text_field :actor1, class: "form-control", placeholder: "1st Lead Actor Name" %>
+        <%= f.text_field :actor1, class: "form-control", placeholder: "Names of Lead Actors seperated by ','" %>
     </div>
   </div>
   <div class="form-group row">
     <%= f.label "Supporting Actor(s)", class: "col-md-3 mform" %> 
     <div class="col-md-9">
-        <%= f.text_field :actor2, class: "form-control", placeholder: "2nd Lead Actor Name" %>
+        <%= f.text_field :actor2, class: "form-control", placeholder: "Names of Supporting Actors seperated by ','" %>
     </div>
   </div>
   <div class="form-group row">
