--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -37,7 +37,14 @@
                 <li>Adipiscing Elit</li-->
             </ul>
             <h3>Owl Ratings</h3>
-            <h4><%= @movie.mratings %> / 5.0</h4>
+            <h4>
+                <% if @movie.reviews.count==0 %>
+                    -
+                <% else %>
+                    <%= @movie.mratings %>
+                <% end %>
+                    / 5.0
+            </h4>
             <h3>Total Ratings</h3>
             <h4><%= @movie.reviews.count %></h4>
             <% if !admin_signed_in? %>
@@ -70,7 +77,7 @@
             <% end %>
         <% end %>
         <% if @movie.reviews.count==0 %>
-            <h3 class="text-info">Be the 1st owl to review this movie.</h3>
+            <h3 class="text-info">Be the 1st owl to hoot about this movie.</h3>
         <% else %>
             <h4>Total Reviews = <%= @movie.reviews.count %></h4>
             <table class="table table-striped table-bordered">
