--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav navbar-right">
                   <% if admin_signed_in? %>
                     <li>
-                        <%= link_to "<span class='glyphicon glyphicon-list-alt'></span> Movies".html_safe, url_for("/movies") %>
+                        <%= link_to "<span class='glyphicon glyphicon-film'></span> Movies".html_safe, url_for("/movies") %>
                     </li>
                     <li>
                         <%= link_to '<span class="glyphicon glyphicon-off"></span> Logout'.html_safe, destroy_admin_session_path, method: :delete %>
@@ -51,7 +51,7 @@
                           <%= link_to "<span class='glyphicon glyphicon-user'></span> #{current_user.email}<span class='caret'></span>".html_safe, edit_user_registration_path, html_options = {class:"dropdown-toggle", 'data-toggle':"dropdown", 'role':"button", 'aria-haspopup':"true", 'aria-expanded':"false"} %>
                           <ul class="dropdown-menu">
                             <li><%= link_to "<span class='glyphicon glyphicon-bookmark'></span>&nbsp;&nbsp;My Watch List".html_safe,user_watchlists_path(current_user.id) %></li>
-                            <li><%= link_to "<span class='glyphicon glyphicon-cog'></span>&nbsp;&nbsp;My Reviews".html_safe, reviews_user_path(:user_email => current_user.email) %></li>
+                            <li><%= link_to "<span class='glyphicon glyphicon-list'></span>&nbsp;&nbsp;My Reviews".html_safe, reviews_user_path(:user_email => current_user.email) %></li>
                             <li><%= link_to "<span class='glyphicon glyphicon-cog'></span>&nbsp;&nbsp;Account Settings".html_safe, edit_user_registration_path %></li>
                           </ul>
                       </li>
