--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <center>
   <div class="row text-center">
-    <h2>Owl Up</h2>
+    <h2 style="text-transform: uppercase"><%= resource_name %> Owl</h2>
     <div class="col-md-3"></div>
     <div class="col-md-6 lForm">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
