--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -10,6 +10,7 @@
             <% if m.length == 0 %>
     	        <br><em>No movies found!</em>
     	    <% else %>
+    	        <h3>Total Movies: <%= m.count %></h3>
                 <table class="table table-striped table-bordered">
                   <tr>
                 	<th>Thumbnail</th>
