--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -1,5 +1,6 @@
 <center>
     <h1>Search Results</h1>
+    <h3>Total Results: <%= @results.count %></h3>
 </center>
 <div class="container">
     <div class="col-md-12 text-center admin">
