--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
                   <span class="icon-bar"></span>
               </button>
               <%= image_tag("owl.png", class:"owl navbar-nav") %>&nbsp;
-              <%= link_to "Movie Owl - <span class='small'>A hub for movie critiques!</span>".html_safe, "/", class:"navbar-brand mowl" %>
+              <%= link_to "Movie Owl - <span class='small'>A hub for movie critics!</span>".html_safe, "/", class:"navbar-brand mowl" %>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
