--- a/app/views/reviews/user.html.erb
+++ b/app/views/reviews/user.html.erb
@@ -11,7 +11,7 @@
                 <th>Index</th>
                 <th>Thumbnail</th>
                 <th>Movie Title</th>
-                <th>Review</th>
+                <th>Your Review</th>
                 <th colspan=2>Actions</th>
             </thead>
             <tbody>
